--- a/app/globals.css
+++ b/app/globals.css
@@ -188,13 +188,13 @@ body{
  }
 
  .video_preview{
-  height: 190px;
-  width: 300px;
+  height: 190px !important;
+  width: 300px !important;
  }
 
  @media (min-width : 640px) {
   .video_preview{
-    height: 375px;
-    width: 500px;
+    height: 375px !important;
+    width: 500px !important;
    }
  }
